# oop1_project

./: CMakeLists.txt
cmake/: SFML.cmake
include/: Board.h  Collider.h  Constants.h  Enemy.h  GameObject.h  Gamecontroller.h  Hud.h  Menu.h  MovingObject.h  Player.h  Resourcemanager.h  StaticObject.h
resources/: Board.txt  CMakeLists.txt
src/: Board.cpp  Enemy.cpp  GameController.cpp  GameObject.cpp  HUD.cpp  Menu.cpp  MovingObject.cpp  Player.cpp  ResourceManager.cpp  StaticObject.cpp  main.cpp
